--- a/b-league.html
+++ b/b-league.html
@@ -77,36 +77,36 @@
       color: black;
     }
 
-    /* Glowing blue nav */
+    /* CLEAN BLUE NAV BUTTONS */
     .nav {
       width: 100%;
       margin-top: 0.25rem;
       margin-bottom: 0.35rem;
       font-size: 0.8rem;
     }
+
     .nav a {
       text-decoration: none;
       padding: 0.25rem 0.7rem;
       border-radius: 999px;
       margin-right: 0.4rem;
 
-      background: rgba(30,58,138,0.4);
-      color: #cbd5e1;
+      background: #1e3a8a;
+      color: #dbeafe;
       font-weight: 600;
-      transition: 0.2s ease;
-      border: 1px solid rgba(96,165,250,0.4);
-    }
-    .nav a:hover {
-      background: rgba(96,165,250,0.6);
-      color: black;
-      box-shadow: 0 0 10px rgba(96,165,250,0.9), 0 0 20px rgba(96,165,250,0.7);
-      border-color: rgba(147,197,253,0.9);
-    }
-    .nav a.active {
-      background: #1d4ed8;
-      color: white;
+      transition: 0.15s ease;
       border: 1px solid #3b82f6;
-      box-shadow: 0 0 12px rgba(59,130,246,0.9), 0 0 20px rgba(96,165,250,0.8);
+    }
+
+    .nav a:hover {
+      background: #1e40af;
+      color: white;
+    }
+
+    .nav a.active {
+      background: #3b82f6;
+      color: black;
+      border-color: #60a5fa;
     }
 
     .table-wrapper {
@@ -127,8 +127,7 @@
       background: #1e293b;
     }
 
-    th,
-    td {
+    th, td {
       padding: 0.4rem 0.22rem;
       font-size: 0.82rem;
       white-space: nowrap;
@@ -137,13 +136,27 @@
       color: black;
     }
 
-    th { font-size: 0.7rem; text-transform: uppercase; letter-spacing: 0.12em; }
+    th {
+      font-size: 0.7rem;
+      text-transform: uppercase;
+      letter-spacing: 0.12em;
+    }
 
-    thead tr { border-bottom: 1px solid rgba(0,0,0,0.45); }
-    tbody tr { border-bottom: 1px solid rgba(0,0,0,0.3); }
-    tbody tr:last-child { border-bottom: none; }
+    thead tr {
+      border-bottom: 1px solid rgba(0,0,0,0.45);
+    }
 
-    th + th, td + td { border-left: 1px solid rgba(0,0,0,0.25); }
+    tbody tr {
+      border-bottom: 1px solid rgba(0,0,0,0.3);
+    }
+
+    tbody tr:last-child {
+      border-bottom: none;
+    }
+
+    th + th, td + td {
+      border-left: 1px solid rgba(0,0,0,0.25);
+    }
 
     th.team, td.team {
       width: 30%;
@@ -152,15 +165,22 @@
       padding-right: 0.25rem;
       font-weight: 600;
     }
-    th.stat, td.stat { width: calc(70% / 9); }
 
-    tbody tr:hover { filter: brightness(0.95); transition: 0.1s ease; }
+    th.stat, td.stat {
+      width: calc(70% / 9);
+    }
 
-    @media (max-width:640px){
+    tbody tr:hover {
+      filter: brightness(0.95);
+      transition: 0.1s ease;
+    }
+
+    /* MOBILE */
+    @media (max-width: 640px) {
       body { padding: 0.5rem; }
-      .page { padding: 0.7rem; border-radius: 0.9rem; }
+      .page { padding: 0.7rem 0.7rem 0.6rem; border-radius: 0.9rem; }
       header { flex-direction: column; gap: 0.5rem; margin-bottom: 0.5rem; }
-      .tag { font-size: 0.58rem; padding: 0.2rem 0.4rem; }
+      .tag { font-size: 0.58rem; padding: 0.2rem 0.4rem; min-width: 0; }
       h1 { font-size: 1.05rem; }
       .subtitle, .right-meta { font-size: 0.68rem; }
       th, td { padding: 0.24rem 0.18rem; font-size: 0.68rem; }
@@ -176,6 +196,7 @@
         <div class="tag">Mysters Rocket League</div>
         <h1>B League</h1>
         <p class="subtitle">Live standings will be updated ASAP by GameFlame</p>
+
         <div class="nav">
           <a href="index.html">Premier League</a>
           <a href="b-league.html" class="active">B League</a>
