--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       justify-content: center;
       align-items: flex-start;
       background: radial-gradient(circle at top, #0f172a 0%, #020617 50%, #000 100%);
-      padding: 0.75rem;
+      padding: 0.75rem;              /* reduced from 1.5rem */
       overflow-x: hidden;
     }
 
@@ -33,7 +33,7 @@
       max-width: 650px;
       background: #1e293b;
       border-radius: 1.2rem;
-      padding: 1rem 1rem 0.9rem;
+      padding: 1rem 1rem 0.9rem;      /* reduced from 1.4rem */
       box-shadow: 0 8px 20px rgba(0,0,0,0.55);
     }
 
@@ -41,7 +41,7 @@
       display: flex;
       justify-content: space-between;
       flex-wrap: wrap;
-      margin-bottom: 0.6rem;
+      margin-bottom: 0.6rem;         /* reduced from 1rem */
       gap: 0.4rem;
     }
 
@@ -77,60 +77,35 @@
       color: black;
     }
 
-    /* CLEAN BLUE NAV BUTTONS */
-    .nav {
-      width: 100%;
-      margin-top: 0.25rem;
-      margin-bottom: 0.35rem;
-      font-size: 0.8rem;
-    }
-
-    .nav a {
-      text-decoration: none;
-      padding: 0.25rem 0.7rem;
-      border-radius: 999px;
-      margin-right: 0.4rem;
-
-      background: #1e3a8a;
-      color: #dbeafe;
-      font-weight: 600;
-      transition: 0.15s ease;
-      border: 1px solid #3b82f6;
-    }
-
-    .nav a:hover {
-      background: #1e40af;
-      color: white;
-    }
-
-    .nav a.active {
-      background: #3b82f6;
-      color: black;
-      border-color: #60a5fa;
-    }
-
-    /* TABLE WRAPPER */
+    /* --- TABLE WRAPPER --- */
     .table-wrapper {
-      margin-top: 0.5rem;
+      margin-top: 0.5rem;            /* reduced from 1rem */
       border-radius: 1rem;
       overflow: hidden;
       background: #0f172a;
-      box-shadow: 0 0 0 2px rgba(0,0,0,0.45);
+      box-shadow: 0 0 0 2px rgba(0,0,0,0.45); /* soft outline */
     }
 
-    /* TABLE */
+    .table-scroll {
+      overflow: visible;             /* let page handle scroll */
+    }
+
+    /* --- CLEAN TABLE WITH THIN SEPARATORS --- */
     table {
       width: 100%;
+      min-width: 0;
       border-collapse: collapse;
       table-layout: fixed;
+      border: none;
     }
 
     thead {
       background: #1e293b;
     }
 
-    th, td {
-      padding: 0.4rem 0.22rem;
+    th,
+    td {
+      padding: 0.4rem 0.22rem;       /* slightly reduced */
       font-size: 0.82rem;
       white-space: nowrap;
       text-align: center;
@@ -144,6 +119,7 @@
       letter-spacing: 0.12em;
     }
 
+    /* Horizontal thin separators */
     thead tr {
       border-bottom: 1px solid rgba(0,0,0,0.45);
     }
@@ -156,11 +132,15 @@
       border-bottom: none;
     }
 
-    th + th, td + td {
+    /* Vertical thin separators */
+    th + th,
+    td + td {
       border-left: 1px solid rgba(0,0,0,0.25);
     }
 
-    th.team, td.team {
+    /* Team column ~30% */
+    th.team,
+    td.team {
       width: 30%;
       text-align: left;
       padding-left: 0.25rem;
@@ -168,7 +148,9 @@
       font-weight: 600;
     }
 
-    th.stat, td.stat {
+    /* Stat columns share remaining 70% */
+    th.stat,
+    td.stat {
       width: calc(70% / 9);
     }
 
@@ -177,16 +159,55 @@
       transition: 0.1s ease;
     }
 
-    /* MOBILE */
+    /* ---------------- MOBILE ---------------- */
     @media (max-width: 640px) {
-      body { padding: 0.5rem; }
-      .page { padding: 0.7rem 0.7rem 0.6rem; border-radius: 0.9rem; }
-      header { flex-direction: column; gap: 0.5rem; margin-bottom: 0.5rem; }
-      .tag { font-size: 0.58rem; padding: 0.2rem 0.4rem; min-width: 0; }
-      h1 { font-size: 1.05rem; }
-      .subtitle, .right-meta { font-size: 0.68rem; }
-      th, td { padding: 0.24rem 0.18rem; font-size: 0.68rem; }
-      .nav { font-size: 0.72rem; }
+      body {
+        padding: 0.5rem;
+      }
+
+      .page {
+        padding: 0.7rem 0.7rem 0.6rem;
+        border-radius: 0.9rem;
+      }
+
+      header {
+        flex-direction: column;
+        gap: 0.5rem;
+        margin-bottom: 0.5rem;
+      }
+
+      .tag {
+        font-size: 0.58rem;
+        padding: 0.2rem 0.4rem;
+        min-width: 0;
+      }
+
+      h1 {
+        font-size: 1.05rem;
+      }
+
+      .subtitle {
+        font-size: 0.68rem;
+      }
+
+      .right-meta {
+        font-size: 0.68rem;
+      }
+
+      .table-wrapper {
+        border-radius: 0.8rem;
+        margin-top: 0.4rem;
+      }
+
+      table {
+        min-width: 0;
+      }
+
+      th,
+      td {
+        padding: 0.24rem 0.18rem;
+        font-size: 0.68rem;
+      }
     }
   </style>
 </head>
@@ -198,11 +219,6 @@
         <div class="tag">Mysters Rocket League</div>
         <h1>Premier League</h1>
         <p class="subtitle">Live standings will be updated ASAP by GameFlame</p>
-
-        <div class="nav">
-          <a href="index.html" class="active">Premier League</a>
-          <a href="b-league.html">B League</a>
-        </div>
       </div>
 
       <div class="right-meta">
@@ -212,23 +228,25 @@
     </header>
 
     <section class="table-wrapper">
-      <table>
-        <thead>
-          <tr>
-            <th class="stat">#</th>
-            <th class="team">Team</th>
-            <th class="stat">P</th>
-            <th class="stat">W</th>
-            <th class="stat">D</th>
-            <th class="stat">L</th>
-            <th class="stat">GF</th>
-            <th class="stat">GA</th>
-            <th class="stat">GD</th>
-            <th class="stat">Pts</th>
-          </tr>
-        </thead>
-        <tbody id="league-body"></tbody>
-      </table>
+      <div class="table-scroll">
+        <table aria-label="Standings">
+          <thead>
+            <tr>
+              <th class="stat">#</th>
+              <th class="team">Team</th>
+              <th class="stat">P</th>
+              <th class="stat">W</th>
+              <th class="stat">D</th>
+              <th class="stat">L</th>
+              <th class="stat">GF</th>
+              <th class="stat">GA</th>
+              <th class="stat">GD</th>
+              <th class="stat">Pts</th>
+            </tr>
+          </thead>
+          <tbody id="league-body"></tbody>
+        </table>
+      </div>
     </section>
   </main>
 
@@ -236,21 +254,22 @@
     const SHEET_CSV_URL =
       "https://docs.google.com/spreadsheets/d/1ilDa0ZleooN3OBruvtOqF9Ym1CitowFjaLCk1GiYiNc/export?format=csv&gid=829195735";
 
-    function parseCsv(txt) {
-      const rows = txt.trim().split("\n").map(r => r.split(","));
-      const [, ...data] = rows;
-      return data.map(c => ({
-        pos: c[0],
-        team: c[1],
-        played: c[2],
-        wins: c[3],
-        draws: c[4],
-        losses: c[5],
-        gf: c[6],
-        ga: c[7],
-        gd: c[8],
-        pts: c[9],
-        colour: c[10]
+    function parseCsv(text) {
+      const rows = text.trim().split("\n").map(r => r.split(","));
+      const [header, ...data] = rows;
+
+      return data.map(cols => ({
+        pos: cols[0],
+        team: cols[1],
+        played: cols[2],
+        wins: cols[3],
+        draws: cols[4],
+        losses: cols[5],
+        gf: cols[6],
+        ga: cols[7],
+        gd: cols[8],
+        pts: cols[9],
+        colour: cols[10]
       }));
     }
 
@@ -258,9 +277,10 @@
       const tbody = document.getElementById("league-body");
       tbody.innerHTML = "";
 
-      teams.forEach(t => {
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
+      teams.forEach((t) => {
+        const row = document.createElement("tr");
+
+        row.innerHTML = `
           <td class="stat">${t.pos}</td>
           <td class="team">${t.team}</td>
           <td class="stat">${t.played}</td>
@@ -274,22 +294,26 @@
         `;
 
         if (t.colour) {
-          [...tr.children].forEach(td => td.style.background = t.colour);
+          Array.from(row.children).forEach((cell) => {
+            cell.style.backgroundColor = t.colour;
+          });
         }
 
-        tbody.appendChild(tr);
+        tbody.appendChild(row);
       });
     }
 
-    async function load() {
+    async function loadLeagueTable() {
       const res = await fetch(SHEET_CSV_URL);
       const text = await res.text();
-      renderTable(parseCsv(text));
+      const teams = parseCsv(text);
+      renderTable(teams);
+
       document.getElementById("last-updated").textContent =
         new Date().toLocaleString();
     }
 
-    load();
+    loadLeagueTable();
   </script>
 </body>
 </html>
