--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Mysters Premier League Table</title>
+  <title>Impulse League Table</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
@@ -45,7 +45,6 @@
       gap: 0.4rem;
     }
 
-    /* Logo + Title group */
     .left-header {
       display: flex;
       align-items: center;
@@ -75,7 +74,6 @@
       color: black;
     }
 
-    /* --- TABLE WRAPPER --- */
     .table-wrapper {
       margin-top: 0.5rem;
       border-radius: 1rem;
@@ -144,7 +142,6 @@
       transition: 0.1s ease;
     }
 
-    /* ---------------- MOBILE ---------------- */
     @media (max-width: 640px) {
       body {
         padding: 0.5rem;
@@ -188,11 +185,10 @@
   <main class="page">
     <header>
       <div class="left-header">
-        <!-- Your PNG logo -->
         <img src="logo.png" alt="League Logo" class="league-logo" />
 
         <div>
-          <h1>Premier League</h1>
+          <h1>Impulse League</h1>
           <p class="subtitle">Live standings will be updated ASAP by GameFlame</p>
         </div>
       </div>
