--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@
     .left-header {
       display: flex;
       align-items: center;
-      gap: 0.8rem;
+      gap: 1rem;
     }
 
+    /* Bigger logo */
     .league-logo {
-      width: 70px;
-      height: 70px;
+      width: 95px;
+      height: 95px;
       object-fit: contain;
     }
 
@@ -158,9 +159,10 @@
         margin-bottom: 0.5rem;
       }
 
+      /* Bigger mobile logo */
       .league-logo {
-        width: 46px;
-        height: 46px;
+        width: 64px;
+        height: 64px;
       }
 
       h1 {
