--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
     header {
       display: flex;
       justify-content: space-between;
+      align-items: center;
       flex-wrap: wrap;
       margin-bottom: 0.6rem;
-      gap: 0.4rem;
+      gap: 0.6rem;
     }
 
     .left-header {
@@ -51,7 +52,6 @@
       gap: 1rem;
     }
 
-    /* Bigger logo */
     .league-logo {
       width: 95px;
       height: 95px;
@@ -67,12 +67,22 @@
     .subtitle {
       font-size: 0.82rem;
       color: black;
+      margin-top: 0.2rem;
     }
 
+    /* Right meta now stacked neatly */
     .right-meta {
       text-align: right;
-      font-size: 0.8rem;
+      font-size: 0.85rem;
       color: black;
+      line-height: 1.6;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+    }
+
+    .right-meta strong {
+      font-weight: 700;
     }
 
     .table-wrapper {
@@ -155,11 +165,9 @@
 
       header {
         flex-direction: column;
-        gap: 0.5rem;
-        margin-bottom: 0.5rem;
+        align-items: flex-start;
       }
 
-      /* Bigger mobile logo */
       .league-logo {
         width: 64px;
         height: 64px;
@@ -196,8 +204,8 @@
       </div>
 
       <div class="right-meta">
-        Season: <strong>1</strong><br />
-        Last updated: <strong id="last-updated"></strong>
+        <div>Season: <strong>1</strong></div>
+        <div>Last updated: <strong id="last-updated"></strong></div>
       </div>
     </header>
 
