--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       display: flex;
       justify-content: space-between;
       align-items: flex-start;
-      flex-wrap: nowrap;              /* ✅ key: stop desktop wrapping */
+      flex-wrap: nowrap;
       margin-bottom: 0.6rem;
       gap: 0.8rem;
     }
@@ -50,7 +50,7 @@
       display: flex;
       align-items: center;
       gap: 1rem;
-      min-width: 0;                   /* ✅ allows text to shrink properly */
+      min-width: 0;
     }
 
     .league-logo {
@@ -61,14 +61,14 @@
     }
 
     .left-text {
-      min-width: 0;                   /* ✅ prevents weird push/wrap */
+      min-width: 0;
     }
 
     h1 {
       font-size: 1.55rem;
       text-transform: uppercase;
       color: black;
-      white-space: nowrap;            /* ✅ keeps IMPULSE LEAGUE on one line */
+      white-space: nowrap;
     }
 
     .subtitle {
@@ -77,23 +77,16 @@
       margin-top: 0.15rem;
     }
 
-    /* Right meta pinned to the right, never drops under on desktop */
     .right-meta {
-      margin-left: auto;              /* ✅ forces it to the far right */
+      margin-left: auto;
       text-align: right;
       font-size: 0.85rem;
       color: black;
       line-height: 1.6;
       display: flex;
       flex-direction: column;
-      justify-content: flex-start;
-      flex: 0 0 auto;
-      white-space: nowrap;            /* ✅ keeps each line intact */
-      padding-top: 0.25rem;           /* slight alignment polish */
-    }
-
-    .right-meta strong {
-      font-weight: 700;
+      white-space: nowrap;
+      padding-top: 0.25rem;
     }
 
     .table-wrapper {
@@ -164,7 +157,6 @@
       transition: 0.1s ease;
     }
 
-    /* ---------------- MOBILE ---------------- */
     @media (max-width: 640px) {
       body {
         padding: 0.5rem;
@@ -176,7 +168,7 @@
       }
 
       header {
-        flex-direction: column;       /* ✅ on mobile: stack */
+        flex-direction: column;
         align-items: flex-start;
         flex-wrap: wrap;
         gap: 0.5rem;
@@ -190,19 +182,12 @@
 
       h1 {
         font-size: 1.05rem;
-        white-space: normal;          /* allow wrap on small screens */
+        white-space: normal;
       }
 
-      .subtitle {
-        font-size: 0.68rem;
-      }
-
+      .subtitle,
       .right-meta {
         font-size: 0.68rem;
-        margin-left: 0;
-        text-align: left;             /* reads better stacked */
-        white-space: normal;
-        padding-top: 0;
       }
 
       th,
@@ -242,9 +227,9 @@
             <th class="stat">W</th>
             <th class="stat">D</th>
             <th class="stat">L</th>
-            <th class="stat">GF</th>
-            <th class="stat">GA</th>
-            <th class="stat">GD</th>
+            <th class="stat">MF</th>
+            <th class="stat">MA</th>
+            <th class="stat">MD</th>
             <th class="stat">Pts</th>
           </tr>
         </thead>
