--- a/index.html
+++ b/index.html
@@ -57,11 +57,6 @@
       width: 95px;
       height: 95px;
       object-fit: contain;
-      flex: 0 0 auto;
-    }
-
-    .left-text {
-      min-width: 0;
     }
 
     h1 {
@@ -147,7 +142,6 @@
       font-weight: 600;
     }
 
-    /* 8 stat columns now instead of 9 */
     th.stat,
     td.stat {
       width: calc(70% / 8);
@@ -159,9 +153,7 @@
     }
 
     @media (max-width: 640px) {
-      body {
-        padding: 0.5rem;
-      }
+      body { padding: 0.5rem; }
 
       .page {
         padding: 0.7rem 0.7rem 0.6rem;
@@ -171,9 +163,7 @@
       header {
         flex-direction: column;
         align-items: flex-start;
-        flex-wrap: wrap;
         gap: 0.5rem;
-        margin-bottom: 0.5rem;
       }
 
       .league-logo {
@@ -205,8 +195,7 @@
     <header>
       <div class="left-header">
         <img src="logo.png" alt="League Logo" class="league-logo" />
-
-        <div class="left-text">
+        <div>
           <h1>Impulse League</h1>
           <p class="subtitle">Live standings will be updated ASAP by GameFlame</p>
         </div>
@@ -219,7 +208,7 @@
     </header>
 
     <section class="table-wrapper">
-      <table aria-label="Standings">
+      <table>
         <thead>
           <tr>
             <th class="stat">#</th>
@@ -246,17 +235,17 @@
       const rows = text.trim().split("\n").map(r => r.split(","));
       const [header, ...data] = rows;
 
-      return data.map(cols => ({
-        pos: cols[0],
-        team: cols[1],
-        played: cols[2],
-        wins: cols[3],
-        losses: cols[5],   // skip draws column (index 4)
-        mf: cols[6],
-        ma: cols[7],
-        md: cols[8],
-        pts: cols[9],
-        colour: cols[10]
+      return data.map((cols, index) => ({
+        pos: index + 1,
+        team: cols[0],
+        played: cols[1],
+        wins: cols[2],
+        losses: cols[3],
+        mf: cols[4],
+        ma: cols[5],
+        md: cols[6],
+        pts: cols[7],
+        colour: cols[8]
       }));
     }
 
