--- a/b-league.html
+++ b/b-league.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Mysters B League Table</title>
+  <title>Impulse Contenders Table</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <style>
@@ -12,11 +12,7 @@
       color: black;
     }
 
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
+    * { box-sizing: border-box; margin: 0; padding: 0; }
 
     body {
       min-height: 100vh;
@@ -40,28 +36,26 @@
     header {
       display: flex;
       justify-content: space-between;
+      align-items: flex-start;
       flex-wrap: wrap;
       margin-bottom: 0.6rem;
-      gap: 0.4rem;
+      gap: 0.8rem;
     }
 
-    .tag {
-      padding: 0.25rem 0.6rem;
-      background: linear-gradient(90deg, #ff0000, #ffd000);
-      border-radius: 0.8rem;
-      font-size: 0.7rem;
-      font-weight: 700;
-      letter-spacing: 0.12em;
-      color: black;
+    .left-header {
       display: flex;
-      justify-content: center;
       align-items: center;
-      min-width: 220px;
+      gap: 1rem;
+    }
+
+    .league-logo {
+      width: 95px;
+      height: 95px;
+      object-fit: contain;
     }
 
     h1 {
       font-size: 1.55rem;
-      margin-top: 0.3rem;
       text-transform: uppercase;
       color: black;
     }
@@ -69,20 +63,18 @@
     .subtitle {
       font-size: 0.82rem;
       color: black;
+      margin-top: 0.15rem;
     }
 
     .right-meta {
       text-align: right;
-      font-size: 0.8rem;
+      font-size: 0.85rem;
       color: black;
+      line-height: 1.6;
     }
 
-    /* CLEAN BLUE NAV BUTTONS */
     .nav {
-      width: 100%;
-      margin-top: 0.25rem;
-      margin-bottom: 0.35rem;
-      font-size: 0.8rem;
+      margin-top: 0.4rem;
     }
 
     .nav a {
@@ -90,23 +82,18 @@
       padding: 0.25rem 0.7rem;
       border-radius: 999px;
       margin-right: 0.4rem;
-
       background: #1e3a8a;
       color: #dbeafe;
       font-weight: 600;
-      transition: 0.15s ease;
       border: 1px solid #3b82f6;
+      transition: 0.15s ease;
     }
 
-    .nav a:hover {
-      background: #1e40af;
-      color: white;
-    }
+    .nav a:hover { background: #1e40af; color: white; }
 
     .nav a.active {
       background: #3b82f6;
       color: black;
-      border-color: #60a5fa;
     }
 
     .table-wrapper {
@@ -117,22 +104,15 @@
       box-shadow: 0 0 0 2px rgba(0,0,0,0.45);
     }
 
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      table-layout: fixed;
-    }
+    table { width: 100%; border-collapse: collapse; table-layout: fixed; }
 
-    thead {
-      background: #1e293b;
-    }
+    thead { background: #1e293b; }
 
     th, td {
       padding: 0.4rem 0.22rem;
       font-size: 0.82rem;
       white-space: nowrap;
       text-align: center;
-      border: none;
       color: black;
     }
 
@@ -142,32 +122,15 @@
       letter-spacing: 0.12em;
     }
 
-    thead tr {
-      border-bottom: 1px solid rgba(0,0,0,0.45);
-    }
-
-    tbody tr {
-      border-bottom: 1px solid rgba(0,0,0,0.3);
-    }
-
-    tbody tr:last-child {
-      border-bottom: none;
-    }
-
-    th + th, td + td {
-      border-left: 1px solid rgba(0,0,0,0.25);
-    }
-
     th.team, td.team {
       width: 30%;
       text-align: left;
       padding-left: 0.25rem;
-      padding-right: 0.25rem;
       font-weight: 600;
     }
 
     th.stat, td.stat {
-      width: calc(70% / 9);
+      width: calc(70% / 8);
     }
 
     tbody tr:hover {
@@ -175,31 +138,22 @@
       transition: 0.1s ease;
     }
 
-    /* MOBILE */
-    @media (max-width: 640px) {
-      body { padding: 0.5rem; }
-      .page { padding: 0.7rem 0.7rem 0.6rem; border-radius: 0.9rem; }
-      header { flex-direction: column; gap: 0.5rem; margin-bottom: 0.5rem; }
-      .tag { font-size: 0.58rem; padding: 0.2rem 0.4rem; min-width: 0; }
-      h1 { font-size: 1.05rem; }
-      .subtitle, .right-meta { font-size: 0.68rem; }
-      th, td { padding: 0.24rem 0.18rem; font-size: 0.68rem; }
-      .nav { font-size: 0.72rem; }
-    }
   </style>
 </head>
 
 <body>
   <main class="page">
     <header>
-      <div>
-        <div class="tag">Mysters Rocket League</div>
-        <h1>B League</h1>
-        <p class="subtitle">Live standings will be updated ASAP by GameFlame</p>
+      <div class="left-header">
+        <img src="logo.png" alt="League Logo" class="league-logo" />
+        <div>
+          <h1>Impulse Contenders</h1>
+          <p class="subtitle">Live standings will be updated ASAP by GameFlame</p>
 
-        <div class="nav">
-          <a href="index.html">Premier League</a>
-          <a href="b-league.html" class="active">B League</a>
+          <div class="nav">
+            <a href="index.html">Impulse League</a>
+            <a href="contenders.html" class="active">Impulse Contenders</a>
+          </div>
         </div>
       </div>
 
@@ -217,11 +171,10 @@
             <th class="team">Team</th>
             <th class="stat">P</th>
             <th class="stat">W</th>
-            <th class="stat">D</th>
             <th class="stat">L</th>
-            <th class="stat">GF</th>
-            <th class="stat">GA</th>
-            <th class="stat">GD</th>
+            <th class="stat">MF</th>
+            <th class="stat">MA</th>
+            <th class="stat">MD</th>
             <th class="stat">Pts</th>
           </tr>
         </thead>
@@ -234,21 +187,21 @@
     const SHEET_CSV_URL =
       "https://docs.google.com/spreadsheets/d/1ilDa0ZleooN3OBruvtOqF9Ym1CitowFjaLCk1GiYiNc/export?format=csv&gid=629194466";
 
-    function parseCsv(txt) {
-      const rows = txt.trim().split("\n").map(r => r.split(","));
-      const [, ...data] = rows;
-      return data.map(c => ({
-        pos: c[0],
-        team: c[1],
-        played: c[2],
-        wins: c[3],
-        draws: c[4],
-        losses: c[5],
-        gf: c[6],
-        ga: c[7],
-        gd: c[8],
-        pts: c[9],
-        colour: c[10]
+    function parseCsv(text) {
+      const rows = text.trim().replace(/\r/g, "").split("\n").map(r => r.split(","));
+      const [header, ...data] = rows;
+
+      return data.map(cols => ({
+        pos: cols[0],
+        team: cols[1],
+        played: cols[2],
+        wins: cols[3],
+        losses: cols[4],
+        mf: cols[5],
+        ma: cols[6],
+        md: cols[7],
+        pts: cols[8],
+        colour: cols[9]
       }));
     }
 
@@ -256,38 +209,40 @@
       const tbody = document.getElementById("league-body");
       tbody.innerHTML = "";
 
-      teams.forEach(t => {
-        const tr = document.createElement("tr");
-        tr.innerHTML = `
-          <td class="stat">${t.pos}</td>
+      teams.forEach((t, index) => {
+        const row = document.createElement("tr");
+
+        row.innerHTML = `
+          <td class="stat">${t.pos || (index + 1)}</td>
           <td class="team">${t.team}</td>
           <td class="stat">${t.played}</td>
           <td class="stat">${t.wins}</td>
-          <td class="stat">${t.draws}</td>
           <td class="stat">${t.losses}</td>
-          <td class="stat">${t.gf}</td>
-          <td class="stat">${t.ga}</td>
-          <td class="stat">${t.gd}</td>
+          <td class="stat">${t.mf}</td>
+          <td class="stat">${t.ma}</td>
+          <td class="stat">${t.md}</td>
           <td class="stat"><strong>${t.pts}</strong></td>
         `;
 
         if (t.colour) {
-          [...tr.children].forEach(td => td.style.background = t.colour);
+          Array.from(row.children).forEach(cell => {
+            cell.style.backgroundColor = t.colour;
+          });
         }
 
-        tbody.appendChild(tr);
+        tbody.appendChild(row);
       });
     }
 
-    async function load() {
-      const res = await fetch(SHEET_CSV_URL);
+    async function loadLeagueTable() {
+      const res = await fetch(SHEET_CSV_URL + "&_ts=" + Date.now(), { cache: "no-store" });
       const text = await res.text();
       renderTable(parseCsv(text));
       document.getElementById("last-updated").textContent =
         new Date().toLocaleString();
     }
 
-    load();
+    loadLeagueTable();
   </script>
 </body>
 </html>
