--- a/index.html
+++ b/index.html
@@ -36,26 +36,28 @@
     header {
       display: flex;
       justify-content: space-between;
-      align-items: flex-start;
       flex-wrap: wrap;
       margin-bottom: 0.6rem;
-      gap: 0.8rem;
+      gap: 0.4rem;
     }
 
-    .left-header {
+    .tag {
+      padding: 0.25rem 0.6rem;
+      background: linear-gradient(90deg, #ff0000, #ffd000);
+      border-radius: 0.8rem;
+      font-size: 0.7rem;
+      font-weight: 700;
+      letter-spacing: 0.12em;
+      color: black;
       display: flex;
+      justify-content: center;
       align-items: center;
-      gap: 1rem;
-    }
-
-    .league-logo {
-      width: 95px;
-      height: 95px;
-      object-fit: contain;
+      min-width: 220px;
     }
 
     h1 {
       font-size: 1.55rem;
+      margin-top: 0.3rem;
       text-transform: uppercase;
       color: black;
     }
@@ -63,18 +65,19 @@
     .subtitle {
       font-size: 0.82rem;
       color: black;
-      margin-top: 0.15rem;
     }
 
     .right-meta {
       text-align: right;
-      font-size: 0.85rem;
+      font-size: 0.8rem;
       color: black;
-      line-height: 1.6;
     }
 
     .nav {
-      margin-top: 0.4rem;
+      width: 100%;
+      margin-top: 0.25rem;
+      margin-bottom: 0.35rem;
+      font-size: 0.8rem;
     }
 
     .nav a {
@@ -85,8 +88,8 @@
       background: #1e3a8a;
       color: #dbeafe;
       font-weight: 600;
-      border: 1px solid #3b82f6;
       transition: 0.15s ease;
+      border: 1px solid #3b82f6;
     }
 
     .nav a:hover { background: #1e40af; color: white; }
@@ -94,6 +97,7 @@
     .nav a.active {
       background: #3b82f6;
       color: black;
+      border-color: #60a5fa;
     }
 
     .table-wrapper {
@@ -104,7 +108,11 @@
       box-shadow: 0 0 0 2px rgba(0,0,0,0.45);
     }
 
-    table { width: 100%; border-collapse: collapse; table-layout: fixed; }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      table-layout: fixed;
+    }
 
     thead { background: #1e293b; }
 
@@ -113,6 +121,7 @@
       font-size: 0.82rem;
       white-space: nowrap;
       text-align: center;
+      border: none;
       color: black;
     }
 
@@ -122,35 +131,55 @@
       letter-spacing: 0.12em;
     }
 
+    thead tr { border-bottom: 1px solid rgba(0,0,0,0.45); }
+    tbody tr { border-bottom: 1px solid rgba(0,0,0,0.3); }
+    tbody tr:last-child { border-bottom: none; }
+
+    th + th, td + td {
+      border-left: 1px solid rgba(0,0,0,0.25);
+    }
+
     th.team, td.team {
       width: 30%;
       text-align: left;
       padding-left: 0.25rem;
+      padding-right: 0.25rem;
       font-weight: 600;
     }
 
     th.stat, td.stat {
-      width: calc(70% / 8);
+      width: calc(70% / 9);
     }
 
-    tbody tr:hover { filter: brightness(0.95); transition: 0.1s ease; }
+    tbody tr:hover {
+      filter: brightness(0.95);
+      transition: 0.1s ease;
+    }
 
+    @media (max-width: 640px) {
+      body { padding: 0.5rem; }
+      .page { padding: 0.7rem 0.7rem 0.6rem; border-radius: 0.9rem; }
+      header { flex-direction: column; gap: 0.5rem; margin-bottom: 0.5rem; }
+      .tag { font-size: 0.58rem; padding: 0.2rem 0.4rem; min-width: 0; }
+      h1 { font-size: 1.05rem; }
+      .subtitle, .right-meta { font-size: 0.68rem; }
+      th, td { padding: 0.24rem 0.18rem; font-size: 0.68rem; }
+      .nav { font-size: 0.72rem; }
+    }
   </style>
 </head>
 
 <body>
   <main class="page">
     <header>
-      <div class="left-header">
-        <img src="logo.png" alt="League Logo" class="league-logo" />
-        <div>
-          <h1>Impulse League</h1>
-          <p class="subtitle">Live standings will be updated ASAP by GameFlame</p>
+      <div>
+        <div class="tag">Mysters Rocket League</div>
+        <h1>Impulse League</h1>
+        <p class="subtitle">Live standings will be updated ASAP by GameFlame</p>
 
-          <div class="nav">
-            <a href="index.html" class="active">Impulse League</a>
-            <a href="b-league.html">B League</a>
-          </div>
+        <div class="nav">
+          <a href="index.html" class="active">Impulse League</a>
+          <a href="contenders.html">Impulse Contenders</a>
         </div>
       </div>
 
@@ -168,10 +197,11 @@
             <th class="team">Team</th>
             <th class="stat">P</th>
             <th class="stat">W</th>
+            <th class="stat">D</th>
             <th class="stat">L</th>
-            <th class="stat">MF</th>
-            <th class="stat">MA</th>
-            <th class="stat">MD</th>
+            <th class="stat">GF</th>
+            <th class="stat">GA</th>
+            <th class="stat">GD</th>
             <th class="stat">Pts</th>
           </tr>
         </thead>
@@ -184,21 +214,21 @@
     const SHEET_CSV_URL =
       "https://docs.google.com/spreadsheets/d/1ilDa0ZleooN3OBruvtOqF9Ym1CitowFjaLCk1GiYiNc/export?format=csv&gid=829195735";
 
-    function parseCsv(text) {
-      const rows = text.trim().replace(/\r/g, "").split("\n").map(r => r.split(","));
-      const [header, ...data] = rows;
-
-      return data.map(cols => ({
-        pos: cols[0],
-        team: cols[1],
-        played: cols[2],
-        wins: cols[3],
-        losses: cols[4],
-        mf: cols[5],
-        ma: cols[6],
-        md: cols[7],
-        pts: cols[8],
-        colour: cols[9]
+    function parseCsv(txt) {
+      const rows = txt.trim().split("\n").map(r => r.split(","));
+      const [, ...data] = rows;
+      return data.map(c => ({
+        pos: c[0],
+        team: c[1],
+        played: c[2],
+        wins: c[3],
+        draws: c[4],
+        losses: c[5],
+        gf: c[6],
+        ga: c[7],
+        gd: c[8],
+        pts: c[9],
+        colour: c[10]
       }));
     }
 
@@ -206,32 +236,30 @@
       const tbody = document.getElementById("league-body");
       tbody.innerHTML = "";
 
-      teams.forEach((t, index) => {
-        const row = document.createElement("tr");
-
-        row.innerHTML = `
-          <td class="stat">${t.pos || (index + 1)}</td>
+      teams.forEach(t => {
+        const tr = document.createElement("tr");
+        tr.innerHTML = `
+          <td class="stat">${t.pos}</td>
           <td class="team">${t.team}</td>
           <td class="stat">${t.played}</td>
           <td class="stat">${t.wins}</td>
+          <td class="stat">${t.draws}</td>
           <td class="stat">${t.losses}</td>
-          <td class="stat">${t.mf}</td>
-          <td class="stat">${t.ma}</td>
-          <td class="stat">${t.md}</td>
+          <td class="stat">${t.gf}</td>
+          <td class="stat">${t.ga}</td>
+          <td class="stat">${t.gd}</td>
           <td class="stat"><strong>${t.pts}</strong></td>
         `;
 
         if (t.colour) {
-          Array.from(row.children).forEach(cell => {
-            cell.style.backgroundColor = t.colour;
-          });
+          [...tr.children].forEach(td => td.style.background = t.colour);
         }
 
-        tbody.appendChild(row);
+        tbody.appendChild(tr);
       });
     }
 
-    async function loadLeagueTable() {
+    async function load() {
       const res = await fetch(SHEET_CSV_URL + "&_ts=" + Date.now(), { cache: "no-store" });
       const text = await res.text();
       renderTable(parseCsv(text));
@@ -239,7 +267,7 @@
         new Date().toLocaleString();
     }
 
-    loadLeagueTable();
+    load();
   </script>
 </body>
 </html>
